[package]
name = "Template"
version = "0.0.0"
edition = "2024"
authors = ["Tsunami014 <tsunami014@duck.com>", "chishxd", "PixelSaver"]

[features]
bootloader = []

[dependencies]
kudos = { git = "https://github.com/kudos-team/kernel.git", branch = "main" }
bootloader = { version = "0.9", features = ["map_physical_memory"]}
x86_64 = "0.14.2"
spin = "0.5.2"
pc-keyboard = "0.8.0"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[dependencies.futures-util]
version = "0.3.4"
default-features = false
features = ["alloc"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

